--- a/assets/stylesheets/src/styles.scss
+++ b/assets/stylesheets/src/styles.scss
@@ -11,6 +11,13 @@ body {
   transform: translateY(-50%);
   margin: 0 auto;
 
+  #keys, #operators {
+    ::selection {
+      background-color: transparent;
+      color: inherit;
+    }
+  }
+
   #result {
     text-align: right;
     padding-right: 2vmin;
